[package]
name = "gnss_tec_core"
version = "0.2.0"
edition = "2024"
description = "Optimized RINEX file parser for the pygnss-tec Python package."
license = "MIT"

[lib]
name = "gnss_tec_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py39"] }
rinex = { version = "0.21.1", features = ["flate2", "nav", "qc"] }
rustc-hash = "2.1.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
